<resources>
    <string name="app_name">ALTP Online</string>
    <string name="facebook_app_id">1120563777999580</string>

    <string name="banner_ad_unit_id">ca-app-pub-2681309004534126/1995949093</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2681309004534126/3472682296</string>

    <string name="test_device_1">666F50DBC9F76F90D726062FAA38B130</string>
    <string name="test_device_2">F62A1ABE4DDAA8A709CCEBA71211561A</string>

    <string name="player">PLAYER</string>
    <string name="enemy">ENEMY</string>
    <string name="city">CITY</string>
    <string name="money_default">0</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="timeout_connect">Timeout to connect</string>
    <string name="btnLogin">Đăng nhập</string>
    <string name="timeout">TIME\nOUT</string>
    <string name="question">Question?</string>
    <string name="no_question">1</string>
    <string name="btn_back">Quay lại</string>
    <string name="btn_play">CHƠI</string>
    <string name="title_baotri">THÔNG BÁO</string>
    <string name="text_baotri">Hệ thống đang bảo trì\nVui lòng quay lại sau!</string>
    <string name="text_search_tryagain">Không tìm thấy đối thủ\nVui lòng tìm kiếm lại!</string>
    <string name="title_gameover">CHÚC MỪNG CHIẾN THẮNG</string>
    <string name="btn_tieptuc">TIẾP TỤC</string>
    <string name="imageview_doithu">Đối thủ</string>
    <string name="answ_A">A:</string>
    <string name="answ_B">B:</string>
    <string name="answ_C">C:</string>
    <string name="answ_D">D:</string>
    <string name="set_Avatar">Đặt Avatar</string>
    <string name="question_Avatar">Bạn muốn chọn ảnh đại diện\ncho mình luôn chứ?</string>
    <string name="avatar_from_camera">Từ Camera</string>
    <string name="avatar_from_gallery">Từ Thư viện</string>
    <string name="trogiup_khangia">Trợ giúp khán giả</string>
    <string name="btn_close">Đóng</string>
    <string name="list_player">Người chơi</string>
    <string name="title_quit_popup">DỪNG CHƠI</string>
    <string name="question_quit_popup">Bạn thực sự muốn dừng  cuộc chơi tại đây?</string>
    <string name="btnNo_quit_popup">Không</string>
    <string name="btnYes_quit_popup">Đồng ý</string>
    <string name="title_edittex_popup">LỖI</string>
    <string name="noti_edittex_popup">Tên đăng nhập \n phải lớn hơn 3 ký tự</string>
    <string name="title_login_popup">ĐĂNG NHẬP</string>
    <string name="wait_text">Vui lòng đợi&#8230;</string>
    <string name="try_again_text">Thử Lại</string>
    <string name="skip_text">Bỏ Qua</string>
    <string name="reconnect_text">Đang kết nối lại.\nVui lòng đợi&#8230;</string>
    <string name="connect_erro_text">Lỗi mạng.\nVui lòng kiểm tra lại&#8230;</string>
    <string name="title_disconnect_popup">MẤT KẾT NỐI</string>
    <string name="hint_edittex_login">Choose username</string>
    <string name="title_wait_popup">HƯỚNG DẪN</string>
    <string name="text_wait_popup">Đợi đối thủ sẵn sàng</string>
    <string name="ready">Đối thủ đã sẵn sàng</string>
    <string name="btn_cancel_wait_popup">THOÁT</string>
    <string name="second_wait_popup">30</string>
    <string name="help4_wait_popup">30 giây mỗi câu hỏi</string>
    <string name="help1_wait_popup">Trợ giúp 50/50</string>
    <string name="help2_wait_popup">Hỏi ý kiến khán giả</string>
    <string name="help3_wait_popup">Đáp án từ chương trình</string>
    <string name="quit">Đối phương đã bỏ cuộc</string>
    <string name="disconnect_server">MẤT KẾT NỐI SERVER</string>
    <string name="title_report">PHẢN HỒI</string>
    <string name="text_report">Có câu hỏi không chính\nxác trong lượt chơi&#63;</string>
    <string name="btn_report">Gửi cho chương trình</string>
    <string name="noti_report">Cảm ơn bạn đã gửi phản hồi!</string>
    <string name="noti_report_2">Bạn đã phản hồi ở lượt chơi này rồi!</string>
    <string name="text_reward">Bạn nhận được phần thưởng 6000 điểm!</string>
    <string name="exit_text">Bạn thực sự muốn thoát?</string>
    <string name="wait_text_quit">Vui lòng đợi!</string>
    <string name="deny_permission">Bạn đã từ chối cấp quyền truy cập.\nVui lòng thử lại!</string>
    <string name="request_permission">Vui lòng cấp quyền truy cập cho ứng dụng?</string>
    <string name="title_permission">CẤP QUYỀN TRUY CẬP</string>


    <string name="text_rate">Đánh giá</string>
    <string name="my_own_rate">ĐÁNH GIÁ</string>
    <string name="my_own_thanks">KHÔNG, CẢM ƠN!</string>
    <string name="my_own_cancel">ĐỂ SAU</string>
</resources>
