<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/layout_marginLeft_40"
        android:layout_marginRight="@dimen/layout_marginRight_40"
        android:background="@drawable/xml_popup_bg_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_marginTop_10"
            android:text="@string/title_edittex_popup"
            android:textColor="#00366D"
            android:textSize="@dimen/text_size_huge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_3"
            android:layout_marginTop="@dimen/layout_marginTop_10"
            android:background="#00366D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/layout_marginBottom_20"
            android:layout_marginLeft="@dimen/layout_marginLeft_20"
            android:layout_marginRight="@dimen/layout_marginRight_20"
            android:layout_marginTop="@dimen/layout_marginTop_30"
            android:gravity="center"
            android:maxLines="2"
            android:paddingLeft="@dimen/paddingLeft_10"
            android:paddingRight="@dimen/paddingRight_10"
            android:text="@string/noti_edittex_popup"
            android:textColor="#EEA542"
            android:textSize="@dimen/text_size_xlarge" />


        <Button
            android:id="@+id/button_okay"
            android:layout_width="@dimen/layout_width_250"
            android:layout_height="@dimen/layout_height_50"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/layout_marginBottom_20"
            android:layout_marginLeft="@dimen/layout_marginLeft_30"
            android:layout_marginRight="@dimen/layout_marginRight_30"
            android:background="@drawable/answer0"
            android:paddingBottom="@dimen/paddingBottom_10"
            android:text="@string/btnYes_quit_popup"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>