<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop_10"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/layout_marginBottom_4"
            android:background="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_ans1"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_50"
                android:layout_marginLeft="@dimen/layout_marginLeft_10"
                android:layout_marginStart="@dimen/layout_marginLeft_10"
                android:layout_weight="1"
                android:background="@drawable/answer0"
                android:gravity="start|center_vertical"
                android:onClick="btnAnswerClick"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:paddingLeft="@dimen/paddingLeft_20"
                android:paddingRight="@dimen/paddingRight_20"
                android:singleLine="true"
                android:text="@string/answ_A"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/button_ans2"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_50"
                android:layout_marginRight="@dimen/layout_marginRight_10"
                android:layout_marginEnd="@dimen/layout_marginRight_10"
                android:layout_weight="1"
                android:background="@drawable/answer0"
                android:gravity="start|center_vertical"
                android:onClick="btnAnswerClick"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:paddingLeft="@dimen/paddingLeft_20"
                android:paddingRight="@dimen/paddingRight_20"
                android:singleLine="true"
                android:text="@string/answ_B"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop_20"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/layout_marginBottom_4"
            android:background="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_ans3"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_50"
                android:layout_marginLeft="@dimen/layout_marginLeft_10"
                android:layout_marginStart="@dimen/layout_marginLeft_10"
                android:layout_weight="1"
                android:background="@drawable/answer0"
                android:gravity="start|center_vertical"
                android:onClick="btnAnswerClick"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:paddingLeft="@dimen/paddingLeft_20"
                android:paddingRight="@dimen/paddingRight_20"
                android:singleLine="true"
                android:text="@string/answ_C"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/button_ans4"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_50"
                android:layout_marginRight="@dimen/layout_marginRight_10"
                android:layout_marginEnd="@dimen/layout_marginRight_10"
                android:layout_weight="1"
                android:background="@drawable/answer0"
                android:gravity="start|center_vertical"
                android:onClick="btnAnswerClick"
                android:paddingBottom="@dimen/paddingBottom_10"
                android:paddingLeft="@dimen/paddingLeft_20"
                android:paddingRight="@dimen/paddingRight_20"
                android:singleLine="true"
                android:text="@string/answ_D"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>