<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xml_bg"
    android:orientation="vertical"
    tools:context="com.oic.game.ailatrieuphu.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageview_useravatar1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#fff"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/textview_username1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageview_useravatar1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imageview_useravatar1"
                android:layout_toRightOf="@+id/imageview_useravatar1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/player"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_city_user1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textview_username1"
                android:layout_alignStart="@+id/textview_username1"
                android:layout_below="@+id/textview_username1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/city"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_money1"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/imageview_useravatar1"
                android:layout_alignStart="@+id/imageview_useravatar1"
                android:layout_below="@+id/imageview_useravatar1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_money"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/money_default"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <TextView
            android:id="@+id/textview_timer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/clock"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/money_default"
            android:paddingBottom="1dp"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageview_useravatar2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#fff"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/textview_username2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageview_useravatar2"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toLeftOf="@+id/imageview_useravatar2"
                android:layout_toStartOf="@+id/imageview_useravatar2"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/enemy"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_city_user2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textview_username2"
                android:layout_below="@+id/textview_username2"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/city"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_money2"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:layout_alignRight="@+id/imageview_useravatar2"
                android:layout_alignEnd="@+id/imageview_useravatar2"
                android:layout_below="@+id/imageview_useravatar2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_money2"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/money_default"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            />
        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_save1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toLeftOf="@+id/button_save2"
            android:layout_toStartOf="@+id/button_save2"
            android:background="@drawable/save1"
            android:onClick="fiftyHelp" />

        <Button
            android:id="@+id/button_save2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/save2"
            android:onClick="audienceHelp"/>

        <Button
            android:id="@+id/button_save3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/button_save2"
            android:layout_toEndOf="@+id/button_save2"
            android:background="@drawable/save3"
            android:onClick="showAnsRightHelp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="3dp"
                android:background="#FFF" />

            <TextView
                android:id="@+id/textview_tablequestion"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/table_question"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/question"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>


        <TextView
            android:id="@+id/textview_moneyquestion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/money_question"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="5dp"
            android:text="@string/money_default"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_numberquestion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/textview_moneyquestion"
            android:layout_alignStart="@+id/textview_moneyquestion"
            android:layout_alignTop="@+id/textview_moneyquestion"
            android:background="@drawable/number_question"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="4dp"
            android:text="@string/no_question"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <include
        layout="@layout/layout_answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />
</LinearLayout>

